--- a/404.html
+++ b/404.html
@@ -1,2 +1,37 @@
-<h1> Pagina no encontrada</h1>
-<a href = index.html> Home</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta name ="viewport" content = "width=device-width,initial-scale=1">
+	<title>Page Not Found</title>
+	<link rel="short icon" href="img/favicon.svg">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/1a5e1b48ba.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/404style.css">
+</head>
+<body>
+	<header>
+		<div class="container">
+			<a href="index.html" > <img src="img/logo.svg" class="logo"> </a>
+			<h2>Error 404</h2>
+		</div>
+	</header>
+	<main>
+		<section id="not-found">
+			<div class="container">
+				<h1>
+					<samp class="line">Sorry...</samp>
+					<samp class="line"> Wrong way</samp>
+				</h1>
+				<h1 class="home">
+					<a href="index.html">
+						<samp class="line">Lets go home </samp>
+						<samp class="line"> -><i class="fas fa-home"></i></samp>
+					</a>
+				</h1>
+			</div>
+		</section>
+	</main>
+</body>
+</html>
