--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 						<p>I started this journey around 2 years ago when I was about to graduate from high school, self-learning about programming and game dev. I find this world amazing and start investing more time in it. Enjoy my work!</p>
 					</div>
 				</div>
-				<div>
+<!-- 				<div>
 					<iframe class="embed" src="https://editor.p5js.org/IsmaelLB/embed/TpSNzL5OC" onmouseover="this.contentWindow.focus();"></iframe>
-				</div>
+				</div> -->
 			</section>
 
 			<section id="games" class="section">
